// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextInput renders an error when present 1`] = `
<div
  className="row  error"
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className="  error"
    list=""
    maxLength={30}
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    size={30}
    title=" Incorrect loyalty number"
    type="text"
    value=""
  />
</div>
`;

exports[`FormTextInput renders the form numeric input correctly 1`] = `
<div
  className="row "
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className=" "
    list=""
    maxLength={30}
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    size={30}
    title=" "
    type="number"
    value=""
  />
</div>
`;

exports[`FormTextInput renders the form text input correctly 1`] = `
<div
  className="row "
>
  <label>
    Test
  </label>
  <input
    autoComplete="off"
    className=" "
    list=""
    maxLength={30}
    onChange={[Function]}
    placeholder="Please enter your loyalty number"
    size={30}
    title=" "
    type="text"
    value=""
  />
</div>
`;

exports[`FormTextInput should call onChange when an input is entered 1`] = `
<div
  className="row "
>
  <input
    autoComplete="off"
    className=" "
    key="email"
    list=""
    maxLength={30}
    name="email"
    onChange={[Function]}
    placeholder=""
    size={30}
    title=" "
    type="text"
    value="test@johnlewis.co.uk"
  />
  <span
    className="clearInput"
  >
    <Icon
      as="i"
      circular={true}
      key="removeemail"
      link={true}
      name="remove"
      onClick={[Function]}
      size="small"
    />
  </span>
</div>
`;
